# cascade-oj/api/cascade/admin/v1/admin_grpc.pb.go
@@ -53,7 +53,6 @@ const (
 	Admin_ListLogFiles_FullMethodName          = "/api.cascade.admin.v1.Admin/ListLogFiles"
 	Admin_QueryLogContent_FullMethodName       = "/api.cascade.admin.v1.Admin/QueryLogContent"
 	Admin_DownloadLogs_FullMethodName          = "/api.cascade.admin.v1.Admin/DownloadLogs"
-	Admin_UploadTestCases_FullMethodName       = "/api.cascade.admin.v1.Admin/UploadTestCases"
 )
 
 // AdminClient is the client API for Admin service.
@@ -120,7 +119,6 @@ type AdminClient interface {
 	QueryLogContent(ctx context.Context, in *QueryLogContentRequest, opts ...grpc.CallOption) (*QueryLogContentReply, error)
 	// Download log files as a zip archive
 	DownloadLogs(ctx context.Context, in *DownloadLogsRequest, opts ...grpc.CallOption) (*httpbody.HttpBody, error)
-	UploadTestCases(ctx context.Context, in *UploadTestCasesRequest, opts ...grpc.CallOption) (*UploadTestCasesReply, error)
 }
 
 type adminClient struct {
@@ -461,16 +459,6 @@ func (c *adminClient) DownloadLogs(ctx context.Context, in *DownloadLogsRequest,
 	return out, nil
 }
 
-func (c *adminClient) UploadTestCases(ctx context.Context, in *UploadTestCasesRequest, opts ...grpc.CallOption) (*UploadTestCasesReply, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(UploadTestCasesReply)
-	err := c.cc.Invoke(ctx, Admin_UploadTestCases_FullMethodName, in, out, cOpts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
 // AdminServer is the server API for Admin service.
 // All implementations must embed UnimplementedAdminServer
 // for forward compatibility.
@@ -535,7 +523,6 @@ type AdminServer interface {
 	QueryLogContent(context.Context, *QueryLogContentRequest) (*QueryLogContentReply, error)
 	// Download log files as a zip archive
 	DownloadLogs(context.Context, *DownloadLogsRequest) (*httpbody.HttpBody, error)
-	UploadTestCases(context.Context, *UploadTestCasesRequest) (*UploadTestCasesReply, error)
 	mustEmbedUnimplementedAdminServer()
 }
 
@@ -644,9 +631,6 @@ func (UnimplementedAdminServer) QueryLogContent(context.Context, *QueryLogConten
 }
 func (UnimplementedAdminServer) DownloadLogs(context.Context, *DownloadLogsRequest) (*httpbody.HttpBody, error) {
 	return nil, status.Error(codes.Unimplemented, "method DownloadLogs not implemented")
-}
-func (UnimplementedAdminServer) UploadTestCases(context.Context, *UploadTestCasesRequest) (*UploadTestCasesReply, error) {
-	return nil, status.Error(codes.Unimplemented, "method UploadTestCases not implemented")
 }
 func (UnimplementedAdminServer) mustEmbedUnimplementedAdminServer() {}
 func (UnimplementedAdminServer) testEmbeddedByValue()               {}
@@ -1263,24 +1247,6 @@ func _Admin_DownloadLogs_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Admin_UploadTestCases_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(UploadTestCasesRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(AdminServer).UploadTestCases(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: Admin_UploadTestCases_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(AdminServer).UploadTestCases(ctx, req.(*UploadTestCasesRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
 // Admin_ServiceDesc is the grpc.ServiceDesc for Admin service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -1419,10 +1385,6 @@ var Admin_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "DownloadLogs",
 			Handler:    _Admin_DownloadLogs_Handler,
-		},
-		{
-			MethodName: "UploadTestCases",
-			Handler:    _Admin_UploadTestCases_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
