# cascade-oj/openapi.yaml
@@ -681,36 +681,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /admin/problems/{problemId}/testcases:
-        post:
-            tags:
-                - Admin
-            operationId: Admin_UploadTestCases
-            parameters:
-                - name: problemId
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            type: string
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/UploadTestCasesReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
     /admin/submissions:
         get:
             tags:
@@ -1431,13 +1401,6 @@ components:
                 userId:
                     type: string
                 password:
-                    type: string
-        UploadTestCasesReply:
-            type: object
-            properties:
-                isSuccess:
-                    type: boolean
-                message:
                     type: string
         UserInfo:
             type: object
